--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
         Here are some list of products available to purchase, click the button below to get this listed
     </p>
 
-    <button value="PLP" id="plp">Get PLP</button>
+    <button value="PLP" id="plpM">Get PLP</button>
+    <div>
+        <button value="AJAX PLP" id="ajaxPlp">Get AJAX PLP</button>
+    </div>
 
     <script src="src/lib/dojo.js"></script>
-    <script src="src/sample/plp.js"></script>
+    <script src="src/sample/plpM.js"></script>
 
 </body>
 </html>
