test coverage report

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button value="AJAX PLP" id="ajaxPlp">Get AJAX PLP</button>
     </div>
 
-    <script src="src/lib/dojo.js"></script>
+    <script src="lib/dojo.js"></script>
     <script src="src/sample/plpM.js"></script>
 
 </body>
